bugs/various: fix editor squashinghelp

--- a/src/style.css
+++ b/src/style.css
@@ -146,7 +146,7 @@ header {
 .editor {
     padding: var(--spacer);
     overflow: scroll;
-    min-width: calc(50% - var(--spacer) * 2);
+    width: 100%;
 }
 
 .help,
